@@ -56,35 +56,10 @@ my $tabletrcolor="#a9b4f2";
 #the title of your score webpage
 my $title="Crossfire scores";
 
+my @levels;
 
-#the levels =)
-# MSW Note - we should really be clever and read the exp_table
-# file to dynamically generate this.
-
-my @levels=(0,2000,4000, 8000,
-	    16000,32000,64000,125000,250000,
-	    500000,900000,1400000,2000000,2600000,
-	    3300000,4100000,4900000,5700000,6600000,
-	    7500000,8400000,9300000,10300000,11300000,
-	    12300000,13300000,14400000,15500000,16600000,
-	    17700000,18800000,19900000,21100000,22300000,
-	    23500000,24700000,25900000,27100000,28300000,
-	    29500000,30800000,32100000,33400000,34700000,
-	    36000000,37300000,38600000,39900000,41200000,
-	    42600000,44000000,45400000,46800000,48200000,
-	    49600000,51000000,52400000,53800000,55200000,
-	    56600000,58000000,59400000,60800000,62200000,
-	    63700000,65200000,66700000,68200000,69700000,
-	    71200000,72700000,74200000,75700000,77200000,
-	    78700000,80200000,81700000,83200000,84700000,
-	    86200000,87700000,89300000,90900000,92500000,
-	    94100000,95700000,97300000,98900000,100500000,
-	    102100000,103700000,105300000,106900000,108500000,
-	    110100000,111700000,113300000,114900000,116500000,
-	    118100000,119700000,121300000,122900000,124500000,
-	    126100000,127700000,129300000,130900000,785400000,
-	    1570800000);
-
+# Populate the levels scalar with the experience in exp_table
+read_exp_table();
 
 my $DEBUG=0;
 
@@ -369,4 +344,46 @@ sub read_dms()
     $dms{$1}=1;
   }
   close(DMLIST);
+}
+
+#
+# read_exp_table()
+#
+# Reads in the active experience table for the server to determine the
+# level of a character if that character does not have a level specified
+# in its own save file.
+#
+# Author: Daniel Hawkins
+#
+sub read_exp_table(){
+	# The experience table for the server is stored here
+	my $exp_table_filename = "$crossfire_home/etc/crossfire/exp_table";
+
+	# Open the experience table file
+	open(EXP_TABLE, "< $exp_table_filename")
+        	|| die("Could not open $exptable_filename. File does not exist.");
+
+	my @exp_value;
+	# read in the experience values from the file
+	while (<EXP_TABLE>){
+        	# ignore comments or blank lines
+        	next if (/^#.*/ || /^\s*$/);
+        	@exp_value = split(/,\s*/, $_);
+        	foreach $val (@exp_value){
+                	# ignore empty sections
+                	next if ($val =~ /^\s*$/);
+                	chomp($val);
+                	if ($val =~ /^\d+$/){
+                        	push @levels, $val;
+                	}
+                	# There is a max_level declaration in the exp table,
+                	# so just ignore it to silence a message.
+                	elsif ($val =~ /^max_level.*/){
+                	}
+                	else{
+                        	print "Found unparsable value '$val'.\n";
+                	}
+        	}
+	}
+	close(EXP_TABLE);
 }
